# notebook-llama

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  workshop.ipynb
notebook_llama/: actors.py  common.py  generate_podcast.py  images.py  notebook.ipynb  pdf_to_podcast.py  preprocess_pdf.py  rewrite_transcript.py  write_transcript.py
